swagger에 기부 및 상점 추가, 토큰 header로 받도록 수정
