# src/routes/middlewares/location/showMyLocation/index.ts
@@ -14,7 +14,7 @@ const showMyLocation = async (
     const data = await User.findOne({
       include: [
         {
-          attributes: ["id", "location", "createdAt"],
+          attributes: ["id", "longitude", "latitude", "createdAt"],
           model: Location,
         },
       ],
@@ -41,6 +41,7 @@ const showMyLocation = async (
       });
     }
   } catch (error) {
+    console.log(error);
     next(new CustomError({ name: "Database_Error" }));
   }
 };
